Add more granular global privilege for api key template